# qutato

./: .gitignore  CLAUDE.md  README.md  benchmark.py  benchmark_results.txt  docker-compose.yml  qutato_memory.json  qutato_stats.json  temp_output.txt  test_crewai.py  verify_cache.py  verify_memory.py  verify_pii.py
gateway/: config.py  (+3 more)
qutato-devkit/: README.md  find_owner.py  pyproject.toml  qutato_browser.py
qutato-devkit/configs/: coderabbit.yaml  mcp-settings.json
qutato-devkit/qutato_devkit/: __init__.py  agent_router.py  cli.py  mcp_server.py  trust_engine.py
qutato-devkit/skills/qutato-agent-browser/: SKILL.md
qutato-devkit/skills/qutato-budget/: SKILL.md
qutato-devkit/skills/qutato-last30days/: SKILL.md
qutato-devkit/skills/qutato-memory/: SKILL.md
qutato-devkit/skills/qutato-pii-shield/: SKILL.md
qutato-devkit/skills/qutato-quickstart/: SKILL.md
qutato-devkit/skills/qutato-trust-gate/: SKILL.md
qutato-devkit/workflows/: qutato.md
qutato_core/: README_core.md  agent_example.py  pyproject.toml
qutato_core/engine/: abstention.py  detector.py  memory.py
qutato_core/plugins/: rescue_plugin.py
qutato_core/qutato_core/: __init__.py  cli.py  config.py  gstack_bridge.py  memory_demo.py  sidecar.py
qutato_core/qutato_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
qutato_core/qutato_core/engine/: __init__.py  abstention.py  adversarial_prober.py  budget.py  logo.py  loop_detector.py  memory.py  pii_redactor.py  quota.py  updater.py
qutato_core/qutato_core/qutato_core.egg-info/: PKG-INFO  SOURCES.txt
(+19 files in other folders)
