[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qutato-devkit"
version = "1.0.0"
description = "Qutato DevKit — The Universal AI Trust & Automation Platform"
authors = [{name = "Ankit Sharma"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0"
]

[project.scripts]
qutato-devkit = "qutato_devkit.cli:main"
