[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qutato-core"
version = "0.1.0"
description = "Mathematical Trust & Abstention layer for LLMs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "httpx",
    "pydantic",
    "pydantic-settings"
]

[project.urls]
Homepage = "https://github.com/AnkitSharma-29/qutato"

[project.scripts]
qutato = "qutato_core.cli:main"
